Clone Netflix OK

--- a/index.html
+++ b/index.html
@@ -5,11 +5,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/responsive.css">
     <title>NETFLIX Clone</title>
 </head>
 
 <body>
-
+    <header>
+        <div class="container">
+            <h2 class="logo">NETFLIX</h2>
+            <nav>
+                <a href="#">Início</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">HOUSE OF CARDS</h3>
+                <p class="descricao">Nada pode impedir o politico sem escrúpulos
+                    Frank underwood de conquistar Washington.
+                    Assistia agora a nova temporada de House of Cards que está
+                    imperdível.</p>
+                <div class="botoes">
+                    <button class="botao" role="button">
+                        <i class="fa-solid fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
+                    <button class="botao" role="button">
+                        <i class="fa-solid fa-circle-info"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+    <div class="carrossel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/capa-caranguejoNegro.jpg" alt="Caranguejo Negro">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-flash.jpg" alt="Flash">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-harina.jpg" alt="Harina">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-peakyBlinders.jpg" alt="Peaky Blinders">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-iceAge.jpg" alt="Ice Age">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-moonKnight.jpg" alt="Moon Knight">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-sing2.jpg" alt="Sing2">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-suits.jpg" alt="Suits">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-swat.jpg" alt="Swat">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-theGoodDoctor.jpg" alt="capa-theGoodDoctor">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-triviaQuest.jpg" alt="capa-triviaQuest">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/capa-umJantarEntreEspioes.jpg" alt="capa-umJantarEntreEspioes">
+            </div>
+        </div>
+    </div>
+    </div>
+    <script src="https://kit.fontawesome.com/b41b181956.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/setup.js"></script>
 </body>
 
 </html>
